android-poc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: temp
spec:
  replicas: 0
  selector:
    matchLabels:
      env: test
  template:
    metadata:
      name: nginx
      labels:
        env: test
    spec:
      containers:
      - name: nginx
        image: nginx
        imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: adb
  namespace: kubevirt
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 5554
    protocol: TCP
    targetPort: 5555
  selector:
    kubevirt.io/vm: android
  sessionAffinity: None
  type: NodePort
